@@ -17,7 +17,6 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import static com.mungta.accusation.constants.AccusationTestSample.*;
@@ -96,8 +95,7 @@ class AdminAccusationControllerTest {
     @DisplayName("[관리자] 회원 신고 리스트 조회 API")
     @Test
     void getAccusationList() throws Exception {
-        //AdminAccusationListResponse response = AdminAccusationListResponse.of(List.of(accusation));
-        AdminAccusationListResponse response = AdminAccusationListResponse.of(Arrays.asList(accusation));
+        AdminAccusationListResponse response = AdminAccusationListResponse.of(List.of(accusation));
 
         doReturn(response)
                 .when(adminAccusationService).getAccusationList();
